fix: let "restore previous search" have enough contrast
[#OCD-3513]

--- a/src/app/pages/search/search.scss
+++ b/src/app/pages/search/search.scss
@@ -19,23 +19,6 @@
     }
 }
 
-.restore-previous-search {
-    padding-top: 10px;
-
-    a {
-        font: {
-            size: larger;
-        }
-        color: #fff;
-
-        &:hover,
-        &:active,
-        &:focus {
-            color: #ccc;
-        }
-    }
-}
-
 .search-table th {
     color: #0070c9;
 }
